--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,4 +6,6 @@ edition = "2021"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-tokio = {version = "1.29.1", features = ["full"]}
+tungstenite = "0.20.0"
+rocket = "=0.5.0-rc.3"
+
