--- a/Cargo.toml
+++ b/Cargo.toml
@@ -3,9 +3,8 @@ name = "copy-service"
 version = "0.1.0"
 edition = "2021"
 
-# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
-
 [dependencies]
 tungstenite = "0.20.0"
 rocket = "=0.5.0-rc.3"
+rocket_dyn_templates = { version = "=0.1.0-rc.3", features = ["tera"] }
 
