--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,4 +7,6 @@ edition = "2021"
 tungstenite = "0.20.0"
 rocket = "=0.5.0-rc.3"
 rocket_dyn_templates = { version = "=0.1.0-rc.3", features = ["tera"] }
+serde = { version = "1.0.104", features = ["derive"] }
+serde_json = "1.0"
 
