--- a/Cargo.toml
+++ b/Cargo.toml
@@ -4,9 +4,10 @@ version = "0.1.0"
 edition = "2021"
 
 [dependencies]
+actix-web = "4"
+actix-cors = "0.6.4"
 tungstenite = "0.20.0"
-rocket = "=0.5.0-rc.3"
-rocket_dyn_templates = { version = "=0.1.0-rc.3", features = ["tera"] }
+askama = "0.12.0"
 serde = { version = "1.0.104", features = ["derive"] }
 serde_json = "1.0"
 
