--- a/Cargo.toml
+++ b/Cargo.toml
@@ -10,4 +10,5 @@ tungstenite = "0.20.0"
 askama = "0.12.0"
 serde = { version = "1.0.104", features = ["derive"] }
 serde_json = "1.0"
+rand = "0.8.5"
 
