--- a/Cargo.toml
+++ b/Cargo.toml
@@ -20,3 +20,6 @@ serde = { version = "1.0.104", features = ["derive"] }
 serde_json = "1.0"
 rand = "0.8.5"
 
+[dev-dependencies]
+lazy_static = "1.4.0"
+
