--- a/Cargo.toml
+++ b/Cargo.toml
@@ -19,6 +19,8 @@ askama = "0.12.0"
 serde = { version = "1.0.104", features = ["derive"] }
 serde_json = "1.0"
 rand = "0.8.5"
+sha256 = "1.3.0"
+base64 = "0.21.2"
 
 [dev-dependencies]
 lazy_static = "1.4.0"
