--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -7,4 +7,7 @@ services:
     restart: always
     ports:
       - "127.0.0.1:${WEB_PORT}:4000"
-      - "127.0.0.1:${WS_PORT}:9001"
+      - "127.0.0.1:${WS_PORT}:4001"
+    volumes:
+      - "${DATA_PATH}:/data"
+      - "${CONFIG_PATH}:/config"
