--- a/.github/workflows/rust.yml
+++ b/.github/workflows/rust.yml
@@ -21,33 +21,37 @@ jobs:
       - name: Run tests
         run: cargo test --verbose
 
-#  deploy:
-#
-#    needs: [ build ]
-#    if: github.ref == 'refs/heads/master'
-#
-#    runs-on: ubuntu-latest
-#
-#    steps:
-#      - uses: actions/checkout@v3
-#
-#      - name: Create config file
-#        run: echo '${{ secrets.CONFIG_FILE }}' >> config.json
-#
-#      - name: Copy project to the hosting
-#        uses: easingthemes/ssh-deploy@v2.1.5
-#        env:
-#          SSH_PRIVATE_KEY: ${{ secrets.SERVER_SSH_KEY }}
-#          ARGS: "-rltgoDzvO --delete"
-#          SOURCE: ""
-#          REMOTE_HOST: ${{ secrets.REMOTE_HOST }}
-#          REMOTE_USER: ${{ secrets.REMOTE_USER }}
-#          TARGET: ${{ secrets.REMOTE_TARGET }}
-#
-#      - name: Deploy project with docker in hosting
-#        uses: garygrossgarten/github-action-ssh@release
-#        with:
-#          command: cd ${{ secrets.REMOTE_TARGET }} && docker-compose up --build -d
-#          host: ${{ secrets.REMOTE_HOST }}
-#          username: ${{ secrets.REMOTE_USER }}
-#          privateKey: ${{ secrets.SERVER_SSH_KEY}}
+  deploy:
+
+    needs: [ build ]
+    if: github.ref == 'refs/heads/master'
+
+    runs-on: ubuntu-latest
+
+    steps:
+      - uses: actions/checkout@v3
+
+      - name: Create env variables file
+        run: |
+          echo 'WEB_PORT=${{ secrets.WEB_PORT }}' > .env
+          echo 'WS_PORT=${{ secrets.WS_PORT }}' >> .env
+          echo 'DATA_PATH=${{ secrets.DATA_PATH }}' >> .env
+          echo 'CONFIG_PATH=${{ secrets.CONFIG_PATH }}' >> .env
+
+      - name: Copy project to the hosting
+        uses: easingthemes/ssh-deploy@v2.1.5
+        env:
+          SSH_PRIVATE_KEY: ${{ secrets.SERVER_SSH_KEY }}
+          ARGS: "-rltgoDzvO --delete"
+          SOURCE: ""
+          REMOTE_HOST: ${{ secrets.REMOTE_HOST }}
+          REMOTE_USER: ${{ secrets.REMOTE_USER }}
+          TARGET: ${{ secrets.REMOTE_TARGET }}
+
+      - name: Deploy project with docker in hosting
+        uses: garygrossgarten/github-action-ssh@release
+        with:
+          command: cd ${{ secrets.REMOTE_TARGET }} && docker-compose up --build -d
+          host: ${{ secrets.REMOTE_HOST }}
+          username: ${{ secrets.REMOTE_USER }}
+          privateKey: ${{ secrets.SERVER_SSH_KEY}}
