--- a/Cargo.toml
+++ b/Cargo.toml
@@ -21,6 +21,7 @@ serde_json = "1.0"
 rand = "0.8.5"
 sha256 = "1.3.0"
 base64 = "0.21.2"
+rusqlite = { version = "0.29.0", features = ["bundled"] }
 
 [dev-dependencies]
 lazy_static = "1.4.0"
